<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.preguntasrapidas.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingLeft="18dp">

        <TextView
            style="@style/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instrucciones" />

        <TextView
            style="@style/preguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1" />

        <CheckBox
            android:id="@+id/checkbox1_1"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1respuesta1" />

        <CheckBox
            android:id="@+id/checkbox1_2"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1respuesta2" />

        <CheckBox
            android:id="@+id/checkbox1_3"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1respuesta3" />

        <CheckBox
            android:id="@+id/checkbox1_4"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1respuesta4" />

        <CheckBox
            android:id="@+id/checkbox1_5"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta1respuesta5" />

        <TextView
            style="@style/preguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:contentDescription="@string/descr_image"
            android:src="@drawable/playa" />

        <CheckBox
            android:id="@+id/checkbox2_1"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2respuesta1" />

        <CheckBox
            android:id="@+id/checkbox2_2"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2respuesta2" />

        <CheckBox
            android:id="@+id/checkbox2_3"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2respuesta3" />

        <CheckBox
            android:id="@+id/checkbox2_4"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2respuesta4" />

        <CheckBox
            android:id="@+id/checkbox2_5"
            style="@style/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta2respuesta5" />

        <TextView
            style="@style/preguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta3A" />

        <TextView
            style="@style/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta3B" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio3_1"
                style="@style/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3respuesta1" />

            <RadioButton
                android:id="@+id/radio3_2"
                style="@style/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3respuesta2" />

            <RadioButton
                android:id="@+id/radio3_3"
                style="@style/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta3respuesta3" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            style="@style/preguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta4A" />

        <TextView
            style="@style/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta4B" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio4_1"
                style="@style/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta4respuesta1" />

            <RadioButton
                android:id="@+id/radio4_2"
                style="@style/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta4respuesta2" />

            <RadioButton
                android:id="@+id/radio4_3"
                style="@style/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta4respuesta3" />

            <RadioButton
                android:id="@+id/radio4_4"
                style="@style/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta4respuesta4" />
        </RadioGroup>

        <TextView
            style="@style/preguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta5A" />

        <TextView
            style="@style/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta5B" />

        <EditText
            android:id="@+id/editText1_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text" />

        <TextView
            style="@style/preguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta6A" />

        <TextView
            style="@style/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta6B" />

        <EditText
            android:id="@+id/editText2_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:onClick="grade"
            android:text="@string/enviar" />

    </LinearLayout>
</ScrollView>
